--- a/index.html
+++ b/index.html
@@ -102,6 +102,21 @@
                         </button>
                     </div>
                 </div>
+
+                <div id="lobby-players" class="mt-8 w-full max-w-md mx-auto glassmorphism rounded-lg p-6 space-y-4" style="display: none;">
+                    <h3 class="text-xl font-semibold text-center text-gray-200">Lobby</h3>
+                    <div id="player-list" class="space-y-3">
+                    </div>
+                    <div class="pt-4 flex flex-col sm:flex-row gap-4">
+                        <button id="ready-btn" class="w-full px-6 py-3 bg-green-600 text-white font-bold rounded-lg hover:bg-green-700 transition-colors">
+                            Ready Up
+                        </button>
+                        <button id="start-game-btn" class="w-full px-6 py-3 bg-cyan-600 text-white font-bold rounded-lg hover:bg-cyan-700 transition-colors cursor-not-allowed opacity-50" style="display: none;">
+                            Start Game
+                        </button>
+                    </div>
+                </div>
+
                 <div id="connection-status" class="text-center text-red-400 min-h-[1.25rem]"></div>
             </div>
 
