--- a/index.html
+++ b/index.html
@@ -140,6 +140,11 @@
                     <h3 class="text-xl font-semibold text-center text-gray-200">Lobby</h3>
                     <div id="player-list" class="space-y-3">
                     </div>
+                    <div id="text-generation-section" class="mt-4 space-y-4" style="display: none;">
+                        <h3 class="text-lg font-semibold text-gray-300 text-center">Customize Race Text</h3>
+                        <textarea id="custom-text-input" class="w-full p-4 bg-gray-800 border border-gray-700 rounded-lg text-lg focus:ring-2 focus:ring-cyan-500 focus:border-cyan-500 outline-none transition" rows="4" placeholder="Enter a prompt to generate text with AI, or paste your own text here."></textarea>
+                        <button id="generate-text-btn" class="w-full px-6 py-3 bg-purple-600 text-white font-bold rounded-lg hover:bg-purple-700 transition-colors">Generate with AI</button>
+                    </div>
                     <div class="pt-4 flex flex-col sm:flex-row gap-4">
                         <button id="ready-btn" class="w-full px-6 py-3 bg-green-600 text-white font-bold rounded-lg hover:bg-green-700 transition-colors">
                             Ready Up
@@ -179,6 +184,9 @@
         <div class="glassmorphism p-8 rounded-lg shadow-xl max-w-sm w-full text-center">
             <h3 id="modal-title" class="text-2xl font-bold mb-4"></h3>
             <p id="modal-message" class="text-gray-300 mb-6"></p>
+            <div id="chart-container" class="mb-6" style="display: none;">
+                <canvas id="stats-chart"></canvas>
+            </div>
             <button id="modal-close-btn" class="px-6 py-2 bg-cyan-600 text-white font-bold rounded-lg hover:bg-cyan-700 transition-colors">Close</button>
         </div>
     </div>
@@ -201,6 +209,7 @@
         </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://unpkg.com/peerjs@1.4.7/dist/peerjs.min.js"></script>
     <script src="script.js"></script>
 </body>
