--- a/index.html
+++ b/index.html
@@ -181,10 +181,10 @@
 
     <!-- Modal -->
     <div id="modal" class="hidden fixed inset-0 bg-black bg-opacity-70 flex items-center justify-center z-50">
-        <div class="glassmorphism p-8 rounded-lg shadow-xl max-w-sm w-full text-center">
+        <div class="glassmorphism p-8 rounded-lg shadow-xl max-w-sm w-full text-center scale-up">
             <h3 id="modal-title" class="text-2xl font-bold mb-4"></h3>
-            <p id="modal-message" class="text-gray-300 mb-6"></p>
-            <div id="chart-container" class="mb-6" style="display: none;">
+            <div id="modal-message" class="text-gray-300 mb-6"></div>
+            <div id="chart-container" class="mb-6 h-64" style="display: none;">
                 <canvas id="stats-chart"></canvas>
             </div>
             <button id="modal-close-btn" class="px-6 py-2 bg-cyan-600 text-white font-bold rounded-lg hover:bg-cyan-700 transition-colors">Close</button>
