--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             <div id="game-view" class="hidden w-full space-y-10 fade-in">
                 <div id="game-status" class="text-center text-2xl font-semibold text-cyan-400 min-h-[2rem] mb-4"></div>
 
-                <div id="player-views-container" class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                <div id="player-views-container">
                 </div>
 
                 <div class="flex justify-between items-center mt-6">
