Add smooth cursor option for split view

--- a/index.html
+++ b/index.html
@@ -220,6 +220,13 @@
                     <label for="scrolling-view-toggle" class="toggle-label block overflow-hidden h-6 rounded-full bg-gray-600 cursor-pointer"></label>
                 </div>
             </div>
+            <div id="smooth-cursor-setting" class="flex items-center justify-between text-gray-300 mt-4">
+                <label for="smooth-cursor-toggle" class="font-medium">Smooth Cursor <span class="text-xs text-gray-400">(split view only)</span></label>
+                <div class="relative inline-block w-10 align-middle select-none">
+                    <input type="checkbox" name="smooth-cursor-toggle" id="smooth-cursor-toggle" class="toggle-checkbox absolute block w-6 h-6 rounded-full bg-gray-800 border-2 border-gray-600 appearance-none cursor-pointer"/>
+                    <label for="smooth-cursor-toggle" class="toggle-label block overflow-hidden h-6 rounded-full bg-gray-600 cursor-pointer"></label>
+                </div>
+            </div>
         </div>
     </div>
 
